# agentic-22ed46f5

./: pyproject.toml
src/insight_agent/: __init__.py  cli.py  config.py  engine.py  llm.py  schemas.py  service.py
src/insight_agent/agents/: __init__.py  column_identifier.py  insight_rules.py  metrics.py
tests/: test_engine.py
