[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insight-agent"
version = "0.1.0"
description = "InsightAgent Engine providing marketing analytics insights"
readme = "README.md"
authors = [
  { name = "InsightAgent" }
]
requires-python = ">=3.10"
dependencies = [
  "langgraph>=0.0.50",
  "pydantic>=2.6.0,<3",
  "pydantic-settings>=2.2.1,<3",
  "openai>=1.11.0",
  "python-dotenv>=1.0.0",
  "fastapi>=0.104,<1",
  "uvicorn[standard]>=0.23,<1"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1"
]

[project.scripts]
insight-agent = "insight_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["insight_agent", "insight_agent.agents"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
